--- a/public/css/style.css
+++ b/public/css/style.css
@@ -33,13 +33,14 @@ h1 {
 
 h2 {
   font-size: 24pt;
+  margin: 0 0 15px 0;
   color: white;
   text-shadow: 3px 3px 3px black;
 }
 
 #session {
   background-color: rgba(156, 156, 255, 0.8);
-  border: 3px solid purple;
+  border: 4px solid purple;
   /* padding: 20px; */
   padding-left: 30px;
   padding-right: 30px;
@@ -61,7 +62,24 @@ h2 {
 }
 
 button#login {
-  position:  relative;
+  position: relative;
+}
+
+button#signup {
+  position: relative;
+}
+
+#routine-new input {
+  border-radius: 30px;
+  font-size: 14pt;
+  margin: 10px 0;
+}
+#routine-new button {
+  background-color: purple;
+  margin-top: 20px;
+  color: white;
+  font-style: bold;
+  font-size: 14pt;
 }
 
 #session #user-nav {
@@ -105,7 +123,7 @@ button#login {
   right: 20px;
   width: 220px;
   overflow: scroll;
-  height: 500px;
+  height: 550px;
   margin: 10px;
 }
 
@@ -115,11 +133,11 @@ button#login {
 
 #stretch-modal {
   position: absolute;
-  margin: 19px;
+  margin: 68px;
   width: auto;
-  padding: 30px;
-  top: 160px;
-  left: 50px;
+  padding: 31px;
+  top: 145px;
+  left: 9px;
   background-color: rgba(96, 68, 101, 0.95);
   color: white;
   text-shadow: 1px 1px 3px black;
@@ -128,7 +146,6 @@ button#login {
   border: 4px solid white;
   box-shadow: 14px 15px 40px black;
 }
-
 #playback {
   z-index: 3;
   top: -135px;
@@ -147,6 +164,11 @@ button#login {
 
 #login-username, #login-password, #login {
   display: inline;
+}
+
+#routine-name, #routine-description {
+  display: inline;
+
 }
 
 button {
@@ -217,6 +239,18 @@ p.routine-description {
   font-size: 10pt;
 }
 
+p.stretch-directions {
+  line-height: 1.3;
+}
+p.stretch-directions {
+  line-height: 1.3;
+}
+
+#stretch-modal p, span {
+  margin: 10px;
+}
+
+
 .routine {
   height: 100px;
   background-color: rgba(255, 255, 136, .90);
@@ -225,7 +259,7 @@ p.routine-description {
   overflow: hidden;
   box-shadow: 2px 2px 4px black;
   color: rgb(182, 118, 0);
-  border: 2px solid orange;
+  border: 4px solid orange;
   overflow: scroll;
   width: 95%;
 }
@@ -245,7 +279,7 @@ p.routine-description {
 }
 
 .stretch-preview {
-  height: 80px;
+  height: 100px;
   background-color: rgba(255, 169, 169, .95);
   margin: 10px 0px;
   border-radius: 16px;
@@ -254,14 +288,14 @@ p.routine-description {
   color: rgb(182, 55, 0);
   font-size: 14pt;
   text-align: center;
-  border: 3px solid rgb(182, 55, 0);
+  border: 4px solid rgb(182, 55, 0);
   width: 95%;
 }
 
 .stretch-to-add {
-  height: 80px;
+  height: 100px;
   background-color: rgba(117, 208, 125, 0.90);
-  border:  3px solid;
+  border:  4px solid;
   color: darkgreen;
   margin: 10px 0px;
   border-radius: 16px;
