another final push

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,6 +12,7 @@ hr {
 div.stretch-info {
   width: auto;
   height: 47px;
+  padding-top: 15px;
 }
 
 p.stretch-info {
@@ -27,7 +28,7 @@ h1 {
   text-align: center;
   font-size: 40pt;
   color: white;
-  text-shadow: 3px 3px 3px black;
+  text-shadow: 6px 6px 10px black;
   margin: 14px;
 }
 
@@ -73,6 +74,9 @@ button#signup {
   border-radius: 30px;
   font-size: 14pt;
   margin: 10px 0;
+  border: 3px solid purple;
+  box-shadow: 3px 3px 6px black;
+  width: 254px;
 }
 #routine-new button {
   background-color: purple;
@@ -87,7 +91,7 @@ button#signup {
 }
 
 #session p {
-  font-size: 15pt;
+  font-size: 16pt;
   color: white;
   text-shadow: 2px 2px 2px black;
   margin-bottom: 10px;
@@ -211,7 +215,6 @@ li {
 
 button.add-stretch {
   height: 25px;
-  width: 45px;
   background-color: rgba(13, 79, 17, 0.41);
   position: relative;
 }
